# pyrove

./: .gitignore  README.md  SPRINT1_COMPLETION.md  SPRINT2_COMPLETION.md  TEST_RESULTS.md  pyproject.toml  test_pipeline.py  test_sprint2.py  test_sprint3_decompose.py
src/pyrove/: __init__.py  __main__.py  config.py  decompose.py  pipeline.py  tasks.py  validator.py
src/pyrove/chunking/: __init__.py  chunker.py
src/pyrove/cli/: __init__.py  main.py
src/pyrove/exporters/: __init__.py  alpaca.py  sharegpt.py
src/pyrove/scrapers/: __init__.py  arxiv.py  github.py  web.py
src/pyrove/storage/: __init__.py  db.py
src/pyrove/transformer/: __init__.py  ollama.py
tests/: test_chunking.py
