[project]
name = "pyrove"
version = "0.1.0"
description = "Topic-driven dataset synthesis for LoRA fine-tuning of Large Language Models."
readme = "README.md"
authors = [
    { name = "Likhin M N", email = "mnlikhin@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "trafilatura>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
rove = "pyrove:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
